BuildHughes/translation-tool/inputs/source_meta/objects/Credit_Card_Installment_Map__mdt.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <label>Credit Card</label>
        <referenceTo>Payu_Credit_Card__mdt</referenceTo>
        <relationshipLabel>Credit Card Installment Maps</relationshipLabel>
        <relationshipName>Credit_Card_Installment_Maps</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Range_End__c</fullName>
        <label>Range End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range_Start__c</fullName>
        <label>Range Start</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit Card Installment Map</label>
    <pluralLabel>Credit Card Installment Maps</pluralLabel>
</CustomObject>